--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "ip": "^1.1.5",
     "mathjs": "^6.0.1",
     "node-localstorage": "^1.3.1",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "systeminformation": "^4.9.0",
     "wav": "^1.0.2",
     "wav-file-info": "0.0.8"
